// Copyright (c) HashiCorp, Inc.
// SPDX-License-Identifier: MPL-2.0

syntax = "proto3";
package proto;

option go_package = "github.com/hashicorp/go-secure-stdlib/plugincontainer/examples/container/proto";

message GetRequest {
    string key = 1;
}

message GetResponse {
    int64 value = 1;
}

message PutRequest {
    string key = 1;
    int64 value = 2;
}

message PutResponse {}

service Storage {
    rpc Get(GetRequest) returns (GetResponse);
    rpc Put(PutRequest) returns (PutResponse);
}

